feat(backend): generic notes
